--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.4.3"
+    "react-intersection-observer": "^9.4.3",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
