--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-scroll-lock": "^1.0.0",
     "react-slick": "^0.29.0"
   },
   "devDependencies": {
